# vantage

./: .env.example  .gitignore  LICENSE  README.md  config.yml  mkdocs.yml  model_costs.json  pydoc-markdown.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_lean_proc_list_kb.sqlite
.github/workflows/: deploy-docs.yml  ruff_checks.yml
docs/: coding_style_guidelines.md  configuration.md  contributing copy.md  contributing.md  index.md  project_structure.md  requirements.txt  testing.md  usage.md
docs/contributing/: code_of_conduct.md  coding_style_guidelines.md  index.md  testing.md
docs/getting-started/: configuration.md  index.md  usage.md
scripts/: gen_ref_pages.py  minif2f-test.py  minif2f_test.py  test_latex_processor_basic.py  test_lean_lsp_analyzer_error.py  test_lean_processor_basic.py  test_lean_processor_tree.py
site/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
site/code_of_conduct/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/installation/: index.html
site/project_structure/: index.html
site/search/: search_index.json
site/testing/: index.html
site/usage/: index.html
src/lean_automator/: config_loader.py  kb_search.py  kb_storage.py  latex_processor.py  lean_interaction.py  lean_lsp_analyzer.py  lean_processor.py  lean_proof_repair.py  llm_call.py
src/lean_automator/config/: loader.py
src/lean_automator/kb/: search.py  storage.py
src/lean_automator/latex/: processor.py
src/lean_automator/lean/: interaction.py  llm_interface.py  lsp_analyzer.py  lsp_client.py  processor.py  prompts.py  proof_repair.py
src/lean_automator/llm/: caller.py
src/vantage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/debug/: test_lean_lsp_analyzer_error.py  test_lean_processor_basic.py
tests/integration/: test_kb_search_integration.py  test_kb_storage_integration.py  test_lean_interaction_integration.py  test_llm_call_integration.py
tests/integration/kb/: test_search_integration.py  test_storage_integration.py
tests/integration/lean/: test_interaction_integration.py
tests/integration/llm/: test_caller_integration.py
tests/unit/: test_kb_search_unit.py  test_kb_storage_unit.py  test_lean_interaction_unit.py  test_llm_call_unit.py
tests/unit/kb/: test_search_unit.py  test_storage_unit.py
tests/unit/lean/: test_interaction_unit.py
tests/unit/llm/: test_caller_unit.py
vantage_lib/: lake-manifest.json  lakefile.toml
vantage_lib/Test/NoDeps/: NoCache.lean
vantage_lib/VantageLib/Test/DepA/: Cached.lean
vantage_lib/VantageLib/Test/DepNeedsBuilding/: NoCache.lean
(+11 files in other folders)
